--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==5.0.1
 djangorestframework==3.14.0
 geographiclib==2.0
 geopy==2.4.1
+gunicorn==21.2.0
+packaging==23.2
 pillow==10.2.0
 pytz==2023.4
 sqlparse==0.4.4
