--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==5.0.1
 djangorestframework==3.14.0
 geographiclib==2.0
@@ -6,6 +7,7 @@ geopy==2.4.1
 gunicorn==21.2.0
 packaging==23.2
 pillow==10.2.0
+psycopg2==2.9.9
 pytz==2023.4
 sqlparse==0.4.4
 typing_extensions==4.9.0
